--- a/package.json
+++ b/package.json
@@ -10,24 +10,28 @@
   "author": "arnold",
   "license": "MIT",
   "dependencies": {
+    "@types/node": "^8.0.15",
     "autoprefixer": "^6.3.3",
+    "cheerio": "^1.0.0-rc.2",
     "css-loader": "^0.23.1",
+    "express": "^4.15.3",
     "fs": "0.0.2",
     "html-loader": "^0.4.5",
     "http": "0.0.0",
     "less": "^2.7.2",
     "less-loader": "^4.0.3",
+    "nodemon": "^1.11.0",
     "postcss": "^5.2.17",
     "postcss-initial": "^1.5.1",
     "postcss-loader": "^0.9.1",
     "postcss-modules-values": "^1.1.3",
     "style-loader": "^0.13.1",
+    "superagent": "^3.5.2",
     "systemjs": "^0.20.17",
+    "utility": "^1.12.0",
     "webpack": "^2.3.2",
     "webpack-bundle-analyzer": "^2.3.1",
     "webpack-dev-server": "^1.12.0",
-    "webpack-shell-plugin": "^0.4.2",
-    "@types/node": "^8.0.15",
-    "nodemon": "^1.11.0"
+    "webpack-shell-plugin": "^0.4.2"
   }
 }
