--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "fs": "0.0.2",
     "html-loader": "^0.4.5",
     "http": "0.0.0",
+    "koa": "^2.3.0",
     "less": "^2.7.2",
     "less-loader": "^4.0.3",
     "nodemon": "^1.11.0",
