--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compileOnSave": true,
   "compilerOptions": {
+    "jsx": "react",
     "declaration": true,
     "target": "es5", //编译为es5的代码
     "module": "commonjs",//模块化方式，还有commonjs，amd等
