--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "tsc --alwaysStrict & webpack -w"
+    "start": "tsc & webpack -w"
   },
   "author": "arnold",
   "license": "MIT",
@@ -19,6 +19,8 @@
     "html-loader": "^0.4.5",
     "http": "0.0.0",
     "koa": "^2.3.0",
+    "koa-webpack-dev-middleware": "^2.0.1",
+    "koa-webpack-hot-middleware": "^1.0.3",
     "less": "^2.7.2",
     "less-loader": "^4.0.3",
     "nodemon": "^1.11.0",
@@ -26,6 +28,7 @@
     "postcss-initial": "^1.5.1",
     "postcss-loader": "^0.9.1",
     "postcss-modules-values": "^1.1.3",
+    "react": "^15.6.1",
     "style-loader": "^0.13.1",
     "superagent": "^3.5.2",
     "systemjs": "^0.20.17",
