--- a/package.json
+++ b/package.json
@@ -5,20 +5,35 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "tsc & webpack -w"
+    "start": "tsc --allowJs & webpack -w",
+    "aa": "nodemon src/js/app.js"
   },
   "author": "arnold",
   "license": "MIT",
   "dependencies": {
+    "@types/koa": "^2.0.39",
+    "@types/koa-compress": "^2.0.6",
     "@types/node": "^8.0.15",
+    "@types/react": "^16.0.2",
+    "@types/react-dom": "^15.5.2",
+    "@types/webpack": "^3.0.7",
+    "@types/webpack-dev-middleware": "^1.9.2",
+    "nodemon": "^1.11.0",
+    "tslint": "^5.6.0",
+    "tslint-react": "^3.2.0",
     "autoprefixer": "^6.3.3",
+    "awesome-typescript-loader": "^3.2.3",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.1",
     "cheerio": "^1.0.0-rc.2",
     "css-loader": "^0.23.1",
     "express": "^4.15.3",
     "fs": "0.0.2",
+    "fsevents": "^1.1.2",
     "html-loader": "^0.4.5",
     "http": "0.0.0",
     "koa": "^2.3.0",
+    "koa-compress": "^2.0.0",
     "koa-webpack-dev-middleware": "^2.0.1",
     "koa-webpack-hot-middleware": "^1.0.3",
     "less": "^2.7.2",
@@ -29,6 +44,7 @@
     "postcss-loader": "^0.9.1",
     "postcss-modules-values": "^1.1.3",
     "react": "^15.6.1",
+    "react-dom": "^15.6.1",
     "style-loader": "^0.13.1",
     "superagent": "^3.5.2",
     "systemjs": "^0.20.17",
