--- a/package.json
+++ b/package.json
@@ -18,9 +18,6 @@
     "@types/react-dom": "^15.5.2",
     "@types/webpack": "^3.0.7",
     "@types/webpack-dev-middleware": "^1.9.2",
-    "nodemon": "^1.11.0",
-    "tslint": "^5.6.0",
-    "tslint-react": "^3.2.0",
     "autoprefixer": "^6.3.3",
     "awesome-typescript-loader": "^3.2.3",
     "babel-core": "^6.26.0",
@@ -32,6 +29,8 @@
     "fsevents": "^1.1.2",
     "html-loader": "^0.4.5",
     "http": "0.0.0",
+    "https": "^1.0.0",
+    "https-proxy-agent": "^2.1.0",
     "koa": "^2.3.0",
     "koa-compress": "^2.0.0",
     "koa-webpack-dev-middleware": "^2.0.1",
@@ -48,6 +47,8 @@
     "style-loader": "^0.13.1",
     "superagent": "^3.5.2",
     "systemjs": "^0.20.17",
+    "tslint": "^5.6.0",
+    "tslint-react": "^3.2.0",
     "utility": "^1.12.0",
     "webpack": "^2.3.2",
     "webpack-bundle-analyzer": "^2.3.1",
