--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.1",
     "cheerio": "^1.0.0-rc.2",
+    "cors": "^2.8.4",
     "css-loader": "^0.23.1",
     "express": "^4.15.3",
     "fs": "0.0.2",
