--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "proxy": "nodemon lib/proxy/app.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "tsc --allowJs & webpack -w",
     "aa": "nodemon src/js/app.js"
@@ -54,6 +55,7 @@
     "webpack": "^2.3.2",
     "webpack-bundle-analyzer": "^2.3.1",
     "webpack-dev-server": "^1.12.0",
-    "webpack-shell-plugin": "^0.4.2"
+    "webpack-shell-plugin": "^0.4.2",
+    "ws": "^3.1.0"
   }
 }
