--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "@types/react-dom": "^15.5.2",
     "@types/webpack": "^3.0.7",
     "@types/webpack-dev-middleware": "^1.9.2",
+    "anyproxy": "^3.10.4",
     "autoprefixer": "^6.3.3",
     "awesome-typescript-loader": "^3.2.3",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.1",
+    "change-case": "^3.0.1",
     "cheerio": "^1.0.0-rc.2",
     "cors": "^2.8.4",
     "css-loader": "^0.23.1",
@@ -39,6 +41,7 @@
     "koa-webpack-hot-middleware": "^1.0.3",
     "less": "^2.7.2",
     "less-loader": "^4.0.3",
+    "node-easy-cert": "^1.1.3",
     "nodemon": "^1.11.0",
     "postcss": "^5.2.17",
     "postcss-initial": "^1.5.1",
