--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "proxy": "nodemon lib/proxy/app.js",
+    "proxys": "nodemon lib/proxy/apps.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "tsc --allowJs & webpack -w",
     "aa": "nodemon src/js/app.js"
@@ -29,6 +30,7 @@
     "cors": "^2.8.4",
     "css-loader": "^0.23.1",
     "express": "^4.15.3",
+    "fastify": "^0.27.0",
     "fs": "0.0.2",
     "fsevents": "^1.1.2",
     "html-loader": "^0.4.5",
