--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/webpack": "^3.0.7",
     "@types/webpack-dev-middleware": "^1.9.2",
     "anyproxy": "^3.10.4",
+    "array-first": "^1.0.2",
     "autoprefixer": "^6.3.3",
     "awesome-typescript-loader": "^3.2.3",
     "babel-core": "^6.26.0",
@@ -37,6 +38,7 @@
     "http": "0.0.0",
     "https": "^1.0.0",
     "https-proxy-agent": "^2.1.0",
+    "is-sorted": "^1.0.4",
     "koa": "^2.3.0",
     "koa-compress": "^2.0.0",
     "koa-webpack-dev-middleware": "^2.0.1",
