--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "fsevents": "^1.1.2",
     "html-loader": "^0.4.5",
     "http": "0.0.0",
+    "http-proxy": "^1.16.2",
     "https": "^1.0.0",
     "https-proxy-agent": "^2.1.0",
     "is-sorted": "^1.0.4",
@@ -46,6 +47,7 @@
     "less": "^2.7.2",
     "less-loader": "^4.0.3",
     "node-easy-cert": "^1.1.3",
+    "node-http-proxy": "^0.2.3",
     "nodemon": "^1.11.0",
     "postcss": "^5.2.17",
     "postcss-initial": "^1.5.1",
