--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "anyproxy": "^3.10.4",
     "arr-flatten": "^1.1.0",
     "array-first": "^1.0.2",
+    "array-range": "^1.0.1",
     "autoprefixer": "^6.3.3",
     "awesome-typescript-loader": "^3.2.3",
     "babel-core": "^6.26.0",
@@ -31,6 +32,7 @@
     "cheerio": "^1.0.0-rc.2",
     "cors": "^2.8.4",
     "css-loader": "^0.23.1",
+    "dedupe": "^2.1.0",
     "express": "^4.15.3",
     "fastify": "^0.27.0",
     "fs": "0.0.2",
